codepkg/objects/Partner__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Data_Company__c</fullName>
        <description>Sales Data Upload Company</description>
        <label>Sales Data Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America Mid West - Hangers Unlimited</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Bengal</fullName>
                </value>
                <value>
                    <fullName>Bangladesh Packaging</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jin Jin</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Colombia - Plasticso Ojara</fullName>
                </value>
                <value>
                    <fullName>Commerce CA</fullName>
                </value>
                <value>
                    <fullName>Dubai - El Kekhia JLT</fullName>
                </value>
                <value>
                    <fullName>Dubai - Hangsort</fullName>
                </value>
                <value>
                    <fullName>Egypt - El Kekhia Labels Packaging</fullName>
                </value>
                <value>
                    <fullName>Egypt - El Kekhia Plastics</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Packaging</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - Ramie</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Instore Agency AB</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti Bags</fullName>
                </value>
                <value>
                    <fullName>Italy - OMAF</fullName>
                </value>
                <value>
                    <fullName>Italy - SpA</fullName>
                </value>
                <value>
                    <fullName>Keasbey</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia - MHL Industries (Malaysia) Sdn. Bhd</fullName>
                </value>
                <value>
                    <fullName>Mexico - Ganchos Freilaj</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Data_Country__c</fullName>
        <label>Sales Data Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America East Coast</fullName>
                </value>
                <value>
                    <fullName>America West Coast</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Benelux (Belgium, Netherland)</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Dubai</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Instore Agency AB</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Romania</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Report_Company__c</fullName>
        <label>Sales Report Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Keasbey</fullName>
                </value>
                <value>
                    <fullName>Tijuana</fullName>
                </value>
                <value>
                    <fullName>America Mid West - Hangers Unlimited</fullName>
                </value>
                <value>
                    <fullName>Commerce CA</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Bengal</fullName>
                </value>
                <value>
                    <fullName>Bangladesh Packaging</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jin Jin</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Colombia - Plasticso Ojara</fullName>
                </value>
                <value>
                    <fullName>Dubai - El Kekhia JLT</fullName>
                </value>
                <value>
                    <fullName>Egypt - El Kekhia Labels Packaging</fullName>
                </value>
                <value>
                    <fullName>Egypt - El Kekhia Plastics</fullName>
                </value>
                <value>
                    <fullName>El Salvador - H.B. Trim Co. Inc.</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - Ramie</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Packaging</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Instore Agency AB</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti Bags</fullName>
                </value>
                <value>
                    <fullName>Italy - OMAF</fullName>
                </value>
                <value>
                    <fullName>Italy - SpA</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia - MHL Industries (Malaysia) Sdn. Bhd</fullName>
                </value>
                <value>
                    <fullName>Mexico - Ganchos Freilaj</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Upload_Company__c</fullName>
        <description>This</description>
        <label>Sales Upload Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia - Mainetti Australia Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Bengal Plastic Industries</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Mainetti (Bangladesh) PVT Ltd</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jinjin (Cambodia) Ltd.</fullName>
                </value>
                <value>
                    <fullName>Central Americas - H.B. Trim Co. Inc.</fullName>
                </value>
                <value>
                    <fullName>China - Suzhou Mainetti Plastic Products Ltd</fullName>
                </value>
                <value>
                    <fullName>Egypt - Elkekhia Group Ltd</fullName>
                </value>
                <value>
                    <fullName>France - Roybier et Fils</fullName>
                </value>
                <value>
                    <fullName>Guatemala - H.B. International Trim , S.A</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - Mainetti (HK) Ltd</fullName>
                </value>
                <value>
                    <fullName>India - Mainetti (India) Pvt Ltd</fullName>
                </value>
                <value>
                    <fullName>Indonesia - PT. Mainetti Packaging Solution</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti SpA</fullName>
                </value>
                <value>
                    <fullName>Korea - Mainetti Korea Co. Ltd</fullName>
                </value>
                <value>
                    <fullName>Malaysia - MHL Industries (Malaysia) Sdn Bhd</fullName>
                </value>
                <value>
                    <fullName>Mexico - Ganchos Freilaj</fullName>
                </value>
                <value>
                    <fullName>Morocco - Mainetti Smaco SA</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Netherlands - Mainetti BV</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pakistan - Mainetti Pakistan (Pvt) Ltd.</fullName>
                </value>
                <value>
                    <fullName>Peru - Hangers Trading E.I.R.L.</fullName>
                </value>
                <value>
                    <fullName>Philippines - Lexan</fullName>
                </value>
                <value>
                    <fullName>Portugal - Mainetti Cabides, Lda</fullName>
                </value>
                <value>
                    <fullName>Romania - Mainetti Romania S.R.L.</fullName>
                </value>
                <value>
                    <fullName>Singapore - Mainetti SEA Pte Ltd</fullName>
                </value>
                <value>
                    <fullName>Spain - Nueva Mainetti, S.A.</fullName>
                </value>
                <value>
                    <fullName>Sri Lanka - Mainettech Lanka (Pvt) Ltd.</fullName>
                </value>
                <value>
                    <fullName>Taiwan - Kuang-Kai Ind. Co, Ltd.</fullName>
                </value>
                <value>
                    <fullName>Thailand - Plastic World</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Category_Description__c</fullName>
        <label>Secondary Category - Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Category_Factory_Name__c</fullName>
        <label>Secondary Category - Factory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Category_Regional_Category__c</fullName>
        <label>Secondary Category - Regional Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LABEL</fullName>
                    <color>#FF0000</color>
                    <label>LABEL</label>
                </value>
                <value>
                    <fullName>POLYBAG</fullName>
                    <color>#FF6600</color>
                    <label>POLYBAG</label>
                </value>
                <value>
                    <fullName>SHOPPING BAGS</fullName>
                    <color>#F3D904</color>
                    <label>SHOPPING BAGS</label>
                </value>
                <value>
                    <fullName>SUIT COVER</fullName>
                    <color>#33FF33</color>
                    <label>SUIT COVER</label>
                </value>
                <value>
                    <fullName>INTELLIGENT SOLUTION</fullName>
                    <color>#AFCADF</color>
                    <label>INTELLIGENT SOLUTION</label>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                    <color>#0B24BE</color>
                    <label>OTHERS</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <color>#000000</color>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Category_Sub_Category__c</fullName>
        <label>Secondary Category - Sub-Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_1_UOM__c</fullName>
        <label>Shipped Quantity 1 UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kg</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_1__c</fullName>
        <label>Shipped Quantity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_2_UOM__c</fullName>
        <label>Shipped Quantity 2 UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_2__c</fullName>
        <label>Shipped Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_3_UOM__c</fullName>
        <label>Shipped Quantity 3 UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_3__c</fullName>
        <label>Shipped Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Terms_Condition__c</fullName>
        <label>Standard Terms &amp; Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_s_Email_Address__c</fullName>
        <label>Supplier Contact&apos;s Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_s_Name__c</fullName>
        <label>Supplier Contact&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Ranking__c</fullName>
        <label>Supplier Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telephone_2__c</fullName>
        <label>Telephone # 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tertiary_Category_Description__c</fullName>
        <label>Tertiary Category - Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Category_Factory_Name__c</fullName>
        <label>Tertiary Category - Factory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Category_Regional_Category__c</fullName>
        <label>Tertiary Category - Regional Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LABEL</fullName>
                </value>
                <value>
                    <fullName>POLYBAG</fullName>
                </value>
                <value>
                    <fullName>SHOPPING BAGS</fullName>
                </value>
                <value>
                    <fullName>SUIT COVER</fullName>
                </value>
                <value>
                    <fullName>INTELLIGENT SOLUTION</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tertiary_Category_Sub_Category__c</fullName>
        <label>Tertiary Category - Sub-Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Customer_1__c</fullName>
        <label>Top Customer 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Customer_2__c</fullName>
        <label>Top Customer 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Customer_3__c</fullName>
        <label>Top Customer 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Product_1__c</fullName>
        <label>Top Product 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Product_2__c</fullName>
        <label>Top Product 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Product_3__c</fullName>
        <label>Top Product 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Product_Type_1__c</fullName>
        <label>Top Product Type 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Product_Type_2__c</fullName>
        <label>Top Product Type 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Product_Type_3__c</fullName>
        <label>Top Product Type 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Operation__c</fullName>
        <label>Type of Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licensee Partner</fullName>
                </value>
                <value>
                    <fullName>Mainetti Company</fullName>
                </value>
                <value>
                    <fullName>Mainetti Company (JV)</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                </value>
                <value>
                    <fullName>RTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UK_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UK Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USA Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Wood_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wood Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Starting_Mainetti_Production__c</fullName>
        <label>Year Starting Mainetti Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_of_Incorporation__c</fullName>
        <label>Year of Incorporation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Partner_Status__c</columns>
        <columns>Default_Order_to_Company__c</columns>
        <columns>Decathlon_Code__c</columns>
        <columns>Location__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Decathlon_Code_Company</fullName>
        <columns>NAME</columns>
        <columns>Decathlon_Code__c</columns>
        <columns>Person_in_Charge__c</columns>
        <columns>Local_ERP_Branch_Code__c</columns>
        <columns>Local_ERP_Company_Code__c</columns>
        <columns>Default_Order_to_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decathlon_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Decathlon Code Company</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Licensee_Partners</fullName>
        <columns>NAME</columns>
        <columns>Partner_Status__c</columns>
        <columns>Location__c</columns>
        <columns>Certification__c</columns>
        <columns>Person_in_Charge__c</columns>
        <columns>Office_Address__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UK_Market__c</columns>
        <columns>EU_Market__c</columns>
        <columns>USA_Market__c</columns>
        <columns>Wood_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partner__c.Licensee_Partner</value>
        </filters>
        <label>Licensee Partners</label>
    </listViews>
    <listViews>
        <fullName>Mainetti_Company</fullName>
        <columns>NAME</columns>
        <columns>Default_Order_to_Company__c</columns>
        <columns>Location__c</columns>
        <columns>Certification__c</columns>
        <columns>Person_in_Charge__c</columns>
        <columns>Office_Address__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UK_Market__c</columns>
        <columns>EU_Market__c</columns>
        <columns>USA_Market__c</columns>
        <columns>Wood_Market__c</columns>
        <columns>Partner_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partner__c.Mainetti_Company</value>
        </filters>
        <label>Mainetti Company</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RTS</fullName>
        <columns>NAME</columns>
        <columns>Partner_Status__c</columns>
        <columns>Type_of_Operation__c</columns>
        <columns>RTS_Partner_Code__c</columns>
        <columns>Allowed_Inventory_Types__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partner__c.RTS</value>
        </filters>
        <label>RTS</label>
        <language>en_US</language>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SalesDataCompany</fullName>
        <columns>NAME</columns>
        <columns>Default_Order_to_Company__c</columns>
        <columns>Sales_Data_Company__c</columns>
        <columns>Sales_Data_Country__c</columns>
        <columns>Sales_Upload_Company__c</columns>
        <columns>Region__c</columns>
        <columns>Cogs_Country__c</columns>
        <columns>Company_Group_Name__c</columns>
        <columns>Location__c</columns>
        <columns>Person_in_Charge__c</columns>
        <columns>Office_Address__c</columns>
        <columns>UK_Market__c</columns>
        <columns>EU_Market__c</columns>
        <columns>USA_Market__c</columns>
        <columns>Wood_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partner__c.Licensee_Partner,Partner__c.Mainetti_Company</value>
        </filters>
        <filters>
            <field>Sales_Upload_Company__c</field>
            <operation>equals</operation>
            <value>Others</value>
        </filters>
        <label>SalesDataCompany</label>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Partner_Status__c</columns>
        <columns>Location__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Tony</value>
        </filters>
        <label>_Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Supplier</fullName>
        <columns>Partner_Number__c</columns>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Overall_Recommendation_del__c</columns>
        <columns>Recommendation_Remark__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Sub__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partner__c.Supplier</value>
        </filters>
        <filters>
            <field>Partner_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Supplier</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TLA_Supplier</fullName>
        <columns>Partner_Number__c</columns>
        <columns>NAME</columns>
        <columns>Country_Region__c</columns>
        <columns>Mainetti_Contacted_by__c</columns>
        <columns>Partner_Status__c</columns>
        <columns>Top_Product_Type_1__c</columns>
        <columns>Top_Product_Type_2__c</columns>
        <columns>Form_Submission_Date__c</columns>
        <columns>Primary_Category_Regional_Category__c</columns>
        <columns>Primary_Category_Sub_Category__c</columns>
        <columns>Primary_Category_Factory_Name__c</columns>
        <columns>Secondary_Category_Regional_Category__c</columns>
        <columns>Secondary_Category_Sub_Category__c</columns>
        <columns>Secondary_Category_Factory_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partner__c.TLA_Supplier</value>
        </filters>
        <label>SRM</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrator_Group</group>
            <group>Supplier_Catalogue_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <recordTypes>
        <fullName>Licensee_Partner</fullName>
        <active>true</active>
        <label>Licensee Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mainetti_Company</fullName>
        <active>true</active>
        <label>Mainetti Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTS</fullName>
        <active>true</active>
        <label>RTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <label>Supplier</label>
    </recordTypes>
    <recordTypes>
        <fullName>TLA_Supplier</fullName>
        <active>true</active>
        <label>TLA Supplier</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_RTS_Partner_Code</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED( RTS_Partner_Code__c )</errorConditionFormula>
        <errorDisplayField>RTS_Partner_Code__c</errorDisplayField>
        <errorMessage>You cannot change RTS Partner Code.</errorMessage>
    </validationRules>
</CustomObject>